--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,10 @@ wp-content/cache/
 wp-content/backups/
 sitemap.xml
 sitemap.xml.gz
+
+################
+# SASS
+################
+
+.sass-cache/
+*.scssc
